# todocore

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_smoke.py
todocore/: __init__.py  db.py  messages.py  schema.py  todo.py  todos_mcp.py  tool_errors.py
